--- a/client/style.css
+++ b/client/style.css
@@ -12,8 +12,9 @@ body {
 }
 
 .self-tag {
+  position: sticky;
   margin-top: 10px;
-  color: rgb(27, 255, 225);
+  color: rgb(49 191 172 / 89%);
   font-size: 1.2 rem;
   font-family: cursive;
 }
@@ -30,7 +31,7 @@ body {
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #17171cf2;
 
   display: flex;
   flex-direction: column;
@@ -66,7 +67,7 @@ body {
 }
 
 .ai {
-  background: #40414F;
+  background: #1c1d24;
 }
 
 .chat {
@@ -127,7 +128,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #40414F;
+  background: #0e0e14b0;
 
   display: flex;
   flex-direction: row;
