--- a/client/style.css
+++ b/client/style.css
@@ -40,7 +40,7 @@
   justify-content: space-between;
 
 
-  background: linear-gradient(rgb(0 0 0), rgb(0 0 0 / 0%)), url(/client/assets/ai.gif), linear-gradient(45deg, black, black);
+  background: linear-gradient(rgb(0 0 0), rgb(0 0 0 / 0%)), url("/client/assets/ai.gif"), linear-gradient(45deg, black, black);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
