--- a/client/style.css
+++ b/client/style.css
@@ -32,7 +32,6 @@
 #app {
   width: 100vw;
   height: 100vh;
-  background: #17171cf2;
 
   display: flex;
   flex-direction: column;
@@ -40,11 +39,18 @@
   justify-content: space-between;
 
 
-  background: linear-gradient(rgb(0 0 0), rgb(0 0 0 / 0%)), url("/client/assets/ai.gif"), linear-gradient(45deg, black, black);
+  background: linear-gradient(rgb(14 14 14), rgb(0 0 0 / 48%)), url("/client/assets/AI.png"), linear-gradient(45deg, black, black);
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
 }
+
+@media screen and (min-width: 768px) {
+  #app {
+    background-size: auto;
+  }
+}
+
 
 .info-banner-wrapper {
   height: 25vh;
@@ -65,7 +71,9 @@
 }
 
 .info-banner-wrapper>.item2>p {
+  display: flex;
   color: #ffffffa4;
+  justify-content: center;
   width: 70vw;
   line-height: 2;
   position: relative;
@@ -162,7 +170,7 @@
 form {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto 1rem auto;
+  margin: 0 auto 0 auto;
   padding: 10px;
   background: #0e0e14b0;
 
