--- a/client/style.css
+++ b/client/style.css
@@ -7,80 +7,81 @@
   font-family: "Alegreya Sans", sans-serif;
 }
 
-
+/* body {
+  background: #343541;
+} */
 
 .self-tag {
   position: sticky;
   margin-top: 10px;
-  color: rgb(91 194 255);
+  color: #ddd;
   font-size: 1.2 rem;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  letter-spacing: 2px;
-  word-spacing: 5px;
-  font-weight: 500;
+  font-family: cursive;
 }
 
 .ai-credit {
   padding-top: 5px;
   color: #4e4646;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-family: 'Nunito Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
 
 }
 
-#app {
+.day-theme {
+  background: #f1f0f0;
   width: 100vw;
-  height: 100vh;
-
+  height: 100svh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
-
-  background: linear-gradient(rgb(14 14 14), rgb(0 0 0 / 48%)), url("/client/assets/AI.png"), linear-gradient(45deg, black, black);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-@media screen and (min-width: 768px) {
-  #app {
-    background-size: auto;
-  }
-}
-
-
-.info-banner-wrapper {
-  height: 25vh;
-
+.night-theme {
+  width: 100vw;
+  height: 100svh;
+  background: #343541;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
 }
 
-.info-banner-wrapper>.item1>h4 {
-  color: #fff;
-  position: relative;
-  margin-top: 20vh;
-  font-weight: 700;
-  letter-spacing: 2px;
-  text-shadow: 1px 1px #ef2020;
+.btn-switcher {
+  position: absolute;
+  height: 0rem;
+  width: 5rem;
+  border: 4px solid #777777;
+  background: #777777;
+  top: 2rem;
+  left: -1rem;
+  bottom: 0;
+  right: 0;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
-.info-banner-wrapper>.item2>p {
-  display: flex;
-  color: #ffffffa4;
-  justify-content: center;
-  width: 70vw;
-  line-height: 2;
-  position: relative;
-  margin: 1rem auto auto 2.5rem;
-  font-weight: 300;
-  letter-spacing: 1px;
-  font-style: italic;
+.btn-switcher::after {
+  content: url('./assets/moon.svg');
+  position: absolute;
+  top: -1.08rem;
+  left: 4rem;
+  bottom: 0;
+  right: 0;
+  height: 1rem;
+  width: 1rem;
+  transition: ease-in-out 0.5s;
+}
+
+@media screen and (max-width: 400px) {
+  .btn-switcher {
+    top: 3rem;
+  }
+
+  .btn-switcher::after {
+    top: -1.08rem;
+  }
 }
 
 #chat_container {
@@ -111,7 +112,7 @@
 }
 
 .ai {
-  background: #1c1d24;
+  background: #40414F;
 }
 
 .chat {
@@ -170,21 +171,20 @@
 form {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   padding: 10px;
-  background: #0e0e14b0;
-
+  background: #40414F;
+  border-radius: 40px;
   display: flex;
   flex-direction: row;
   gap: 10px;
+  margin-bottom: 0.2rem;
 }
 
 textarea {
   width: 100%;
-
   color: #fff;
   font-size: 18px;
-
   padding: 5px;
   background: transparent;
   border-radius: 5px;
