--- a/client/style.css
+++ b/client/style.css
@@ -63,7 +63,7 @@
 }
 
 .btn-switcher::after {
-  content: url('./assets/moon.svg');
+  content: url('/assets/moon.svg');
   position: absolute;
   top: -1.08rem;
   left: 4rem;
