--- a/client/style.css
+++ b/client/style.css
@@ -63,7 +63,7 @@
 }
 
 .btn-switcher::after {
-  content: url('/assets/moon.svg');
+  content: url('./assets/moon.svg');
   position: absolute;
   top: -1.08rem;
   left: 4rem;
@@ -119,7 +119,6 @@
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -130,9 +129,7 @@
   width: 36px;
   height: 36px;
   border-radius: 5px;
-
   background: #0180a7;
-
   display: flex;
   justify-content: center;
   align-items: center;
